--- a/resources/certificates.yaml
+++ b/resources/certificates.yaml
@@ -12,3 +12,18 @@ spec:
     - http01:
         ingress:
           class: traefik
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: registry-letsencrypt-prod
+spec:
+  acme:
+    email: davidalen51@gmail.com
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: alen-registry-letsencrypt-prod
+    solvers:
+    - http01:
+        ingress:
+          class: traefik
